Bug 114242 - Menu/LibreOffice/Help/LibreOffice Help/[Content] -> Crash
Summary: Menu/LibreOffice/Help/LibreOffice Help/[Content] -> Crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.beta1
Hardware: All All
: highest critical
Assignee: Michael Stahl
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: bisected, haveBacktrace, regression
: 114419 114641 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-04 16:18 UTC by m_a_riosv
Modified: 2017-12-22 21:00 UTC (History)
8 users (show)

See Also:
Crash report or crash signature: ["ntdll.dll"]


Attachments
gdb backtrace (38.94 KB, text/plain)
2017-12-06 15:05 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2017-12-04 16:18:44 UTC
Description:
Since 6.0
Selecting Menu/LibreOffice/Help/LibreOffice Help/[Content] -> Crash

Steps to Reproduce:
1.Select Menu/LibreOffice/Help/LibreOffice Help/[Content]
-> Crash

Actual Results:  
LibreOffice Crash

Expected Results:
No Crash.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Works with:
Version: 5.4.3.2 (x64)
Build ID: 92a7159f7e4af62137622921e809f8546db437e5
CPU threads: 4; OS: Windows 6.19; UI render: default; 
Locale: es-ES (es_ES); Calc: group

Crash with:
Version: 6.0.0.0.beta1+ (x64)
Build ID: 315868323e805305c61085c370d50196c93a3327
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-0, Time: 2017-11-30_01:48:14
Locale: es-ES (es_ES); Calc: group threaded
Version: 6.0.0.0.beta1+ (x64)
Build ID: 315868323e805305c61085c370d50196c93a3327
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-0, Time: 2017-11-30_01:48:14
Locale: es-ES (es_ES); Calc: group threaded

OpenGL doesn't matter.


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xavier Van Wijmeersch 2017-12-05 14:49:48 UTC
no repro with

Version: 6.0.0.0.beta1+
Build ID: a2d5b912e103c680339162ccfd15783ba6bfa232
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded

maybe only windows???
Comment 2 Aron Budea 2017-12-05 21:31:56 UTC
What's the [Content]? Do you need to have offline help installed?
Comment 3 XTR 2017-12-06 12:34:29 UTC
Confirm for

Version: 6.0.0.0.beta1 (x64)
Build ID: 97471ab4eb4db4c487195658631696bb3238656c
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: ru-RU (ru_RU); Calc: CL


offline help is installed and opened

crash on click on tab "Contents"

http://crashreport.libreoffice.org/stats/crash_details/0ef6d6a2-768f-4193-bd7f-f9977072ca61
Comment 4 XTR 2017-12-06 13:28:08 UTC
Confirm with

Version: 6.0.0.0.beta1
Build ID: 97471ab4eb4db4c487195658631696bb3238656c
CPU threads: 2; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ru-RU (ru_RU.UTF-8); Calc: group threaded

Ubuntu 16.04 LTS

so, not only Windows


http://crashreport.libreoffice.org/stats/crash_details/4941a4db-db97-4225-ae15-85aa026c99ef
Comment 5 Xisco Faulí 2017-12-06 15:05:41 UTC
Created attachment 138246 [details]
gdb backtrace

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 2392238e480ecc1d1a5e2e69789e79c10f142d6c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF-dbg, Branch:master, Time: 2017-12-05_23:58:29
Locale: ca-ES-valencia (ca_ES.UTF-8@valencia); Calc: group threaded
Comment 6 Xisco Faulí 2017-12-06 16:40:00 UTC
I can't reproduce it building LibreOffice locally with --with-help

Version: 6.1.0.0.alpha0+
Build ID: 65e6ef34bbedf216ad15978317391199fe16a56f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8@valencia); Calc: group threaded
Comment 7 m_a_riosv 2017-12-09 12:58:19 UTC
Still with:
Version: 6.0.0.0.beta2 (x64)
Build ID: 13edaaa12f25de343fce136064e27da66c1c4fa4
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: es-ES (es_ES); Calc: CL

crashreport.libreoffice.org/stats/crash_details/a186ab85-c35b-47c1-910b-c34a9d3b9439
Comment 8 Michael Stahl 2017-12-11 19:42:11 UTC
regression from:

commit 4b69497e36b941d4db62ae8d5bad863d032fdc50

    loplugin:useuniqueptr in TVDom
    
fixed on master
Comment 9 Commit Notification 2017-12-11 19:43:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a3bb9356219754af7e651a879b5fc8925a18468

tdf#114242 xmlhelp: fix crash in TVChildTarget::Check()

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2017-12-12 11:29:35 UTC
*** Bug 114419 has been marked as a duplicate of this bug. ***
Comment 11 m_a_riosv 2017-12-12 22:56:42 UTC
Thanks for the fix @Michael.
But there are not help packs on 6.1 for test. If it could be packported on 6.0 for test.
Comment 12 Commit Notification 2017-12-15 11:43:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dabfbb120dfaca2958f503387a3acac97886e3af&h=libreoffice-6-0

tdf#114242 xmlhelp: fix crash in TVChildTarget::Check()

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 m_a_riosv 2017-12-16 11:13:14 UTC
Tested with
Version: 6.0.0.0.beta2+ (x64)
Build ID: bd260a59cfdd050db3aa9a641ef0fa09efcedf5b
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-0, Time: 2017-12-16_05:54:16
Locale: es-ES (es_ES); Calc: CL
Comment 14 Xisco Faulí 2017-12-22 21:00:50 UTC
*** Bug 114641 has been marked as a duplicate of this bug. ***