tdf#114242 xmlhelp: fix crash in TVChildTarget::Check()

The ... idiomatic C++ code in TVChildTarget::Check() and
SearchAndInsert() handles ownership in non-obvious ways,
so it's not surprising that it took offense at the recent
conversion to std::unique_ptr.  Let's at least try to
prevent it from crashing so quickly.

(regression from 4b69497e36b941d4db62ae8d5bad863d032fdc50)

(cherry picked from commit 8a3bb9356219754af7e651a879b5fc8925a18468)

Attempt to blind fix build breaker
(cherry picked from commit 4094f9baf62a426b24f497c86d6a96ccfcb22ad1)

Change-Id: I0981707a61aee1733e727b1c00346d8ec524362e